# LiberCode

./: .env.example  AGENTS.md  README.md  libercode.json.example  pyproject.toml  requirements.txt
agents/: libercode.py
libercode/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.json  session_manager.py  teammate_manager.py
libercode/core/: __init__.py  interrupt_handler.py  lead.py  teammate.py  teammate_manager.py
libercode/messaging/: bus.py  protocol.py  serialization.py
libercode/prompts/: init_agents_md.txt  lead_system.txt  teammate_system.txt
libercode/taskboard/: manager.py  models.py
libercode/tools/: base.py  lead_tools.py  teammate_tools.py  validator.py  worktree_tools.py
libercode/ui/: __init__.py  input_handler.py  output.py  status_pane.py  tmux.py
libercode/utils/: __init__.py  logging.py  token_tracker.py
libercode/worktree/: __init__.py  events.py  manager.py
